syntax = "proto3";

option java_multiple_files = true;
option java_package = "sep3.project.data.grpc";
option csharp_namespace = "Server.Grpc";

service Data {
  rpc getAllJobs(GetAllJobsRequest) returns (GetAllJobsResponse);
}

message GetAllJobsRequest {
  //
}

message GetAllJobsResponse {
  message Job {
    int64 id = 1;
    string title = 2;
    string description = 3;
    double salary = 4;
    string type = 5;
    string deadline = 6; 
    string location = 7; 
  }

  repeated Job jobs = 1;
}
